# knowrob

failure_ontology/: CMakeLists.txt  package.xml
failure_ontology/prolog/: init.pl
json_prolog/: CMakeLists.txt  package.xml
json_prolog/examples/: test_json_prolog.cpp  test_json_prolog.py
json_prolog/launch/: json_prolog.launch
rosinstall/: knowrob-all.rosinstall  knowrob-base.rosinstall
